# gemelo_digital_qav250

./: .gitignore  README.md  contexto_reto_ia.md  instalar_dependencias.sh  notas_01_06_drone  notas_03_06_drone  notas_29_05_drone  package.xml  setup.py  test_gyro_serial.py  vuelo_log_20260605_122105.txt  vuelo_log_20260605_122520.txt  vuelo_log_20260605_123425.txt  vuelo_log_20260605_132631.txt  vuelo_log_20260605_154139.txt  vuelo_log_20260605_154522.txt
src_tw/: .gitignore  README.md  analyze_log.py  analyze_log_2.py  check_battery.py  instalar_dependencias.sh  package.xml  setup.cfg  setup.py
src_tw/data/dem/: terreno.tif  terreno_hermosillo.tif
src_tw/gemelo_digital_qav250/: README.md  captura_pwm.py  modelo_euler_lagrange.py  nodo_gemelo_digital.py  nodo_gemelo_fantasma.py  nodo_lector_gyro.py  pid_actitud.py  plot_log.py  registrar_comparativa.py  registrar_datos.py  rutina_demo.py  ver_pose.py
src_tw/gemelo_digital_qav250/config/: README.md  qav250_params.yaml
src_tw/install/: local_setup.sh  setup.sh  setup.zsh
src_tw/install/gemelo_digital_qav250/lib/gemelo_digital_qav250/: nodo_gemelo_digital  registrar_datos
src_tw/launch/: README.md  gemelo_comparativo.launch.py  gemelo_demo.launch.py  gemelo_digital.launch.py
src_tw/log/: latest_build  latest_test  latest_test-result
src_tw/models/: README.md
src_tw/models/drone_demo/: drone_simple.sdf  drone_simple_ghost.sdf  model.config
src_tw/resource/: gemelo_digital_qav250
src_tw/test/: check_mavlink.py  test_modelo.py  test_nan_protection.py
src_tw/worlds/: README.md  qav250_twin.world
(+61 files in other folders)
