<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gemelo_digital_qav250</name>
  <version>1.0.0</version>
  <description>Digital Twin for the QAV250 Quadcopter on FFT GYRO test stand</description>
  <maintainer email="support@example.com">SOPORTE</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pymavlink</exec_depend>
  <exec_depend>ros-humble-tf-transformations</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
